site/public/css/polls.css
.dropdown-wrapper h2 {
    display: inline;
    margin: 0;
}

.dropdown-bar {
    padding: 0 0 20px;
}

.dropdown-btn {
    float: right;
    font-size: 31px;
}

.dropdown-btn .down {
    transform: rotate(90deg);
}

.option-title {
    font-weight: bold;
}

.poll-type-option {
    padding-bottom: 10px;
}

.poll-type-description {
    padding-left: 25px;
    color: var(--text-black);
}

.move-btn {
    background: transparent;
    padding: 10px;
    display: inline-block;
    border: var(--text-black);
    border-style: solid;
    border-radius: 5px;
    cursor: pointer;
}

.timer {
    margin-bottom: 20px;
    margin-left: auto;
    font-size: 2em;
}

.option-btn {
    vertical-align: middle;
}

.option-btn input[type="radio"] {
    vertical-align: top;
}

.student-submit {
    margin-top: 2em;
}

.option-text {
    display: flex;
    align-items: center;
    gap: 15px;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    padding-left: 0.25em;
}

.radio p {
    display: inline;
}

.radio-label-pair {
    display: flex;
    align-items: flex-start;
}

input[type="radio"][disabled=""]:checked::before {
    content: "";
    display: block;
    position: relative;
    top: 3px;
    left: 3px;
    width: 7px;
    height: 7px;
    border-radius: 100%;
    background: var(--standard-medium-dark-gray);
}

.active {
    background: var(--always-default-white);
}

form {
    display: inline;
}

.poll-view-table {
    display: flex;
    flex-wrap: wrap;
}

.poll-view-wrapper.info-wrapper {
    flex: 1 1 0;
    margin-right: 3%;
    max-width: 73%;
}

.poll-view-wrapper.info-wrapper img {
    width: 100%;
}

.poll-view-wrapper.histogram-wrapper {
    flex: 2 1 0;
}

#poll-name-container {
    display: inline-flex;
    width: 100%;
    align-items: center;
}

#poll-name {
    flex-grow: 100;
    margin-left: 0.5em;
}

#timer-inputs {
    display: inline-block;
}

.poll-timer {
    display: inline-block;
    text-align: center;
    /* stylelint-disable-next-line declaration-no-important */
    width: 4em !important;
}

.poll-input {
    display: inline-block;
    text-align: center;
    margin-right: 0.5em;
    margin-bottom: 1em;
    font-size: 0.8em;
    /* stylelint-disable-next-line declaration-no-important */
    width: 4em !important;
}

.response-container .poll-response {
    resize: none;
    min-height: 50px;
    max-height: 300px;
    height: 50px;
    width: calc(100% - 200px);
}

.response-container .poll-response-custom {
    background-color: var(--standard-light-blue-gray);
}

.correct-tag-background {
    color: var(--standard-dark-green);
}

.correct-tag-checkmark {
    color: var(--text-white);
}

.break-above {
    margin-top: 1.5em;
}

